# django_deploy_tools

./: .gitignore  MANIFEST.in  README.md  check_code  manage.py  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: pythonpackage.yml  pythonpublish.yml
django_deploy_tools/: apps.py  asgi.py  settings.py  utils.py  wsgi.py
django_deploy_tools/management/commands/: make_apache_conf.py  make_sgi.py  make_wsgi.py
django_deploy_tools/templates/django_deploy_tools/: asgi.py  sgi.py  wsgi.py
django_deploy_tools/utils/: __init__.py  apache.py
