[metadata]
name = Django Deployment Tools
summary = Django deployment utilities
description-file =
    README.md
author = Orange Cloud for Business
author-email = yves-gwenael.bourhis@orange.com
home-page = http://www.cloudwatt.com/
classifier =
    Environment :: Console
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true

[files]
packages =
    django_deploy_tools

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pycodestyle]
exclude =
    django_deploy_tools/templates
